--- a/package.json
+++ b/package.json
@@ -126,6 +126,12 @@
     "webpack-hot-middleware": "^2.25.0"
   },
   "dependencies": {
-    "cookie-parser": "^1.4.4"
+    "@types/btoa": "^1.2.3",
+    "btoa": "^1.2.1",
+    "connect-multiparty": "^2.2.0",
+    "cookie-parser": "^1.4.4",
+    "css-loader": "^3.1.0",
+    "nprogress": "^0.2.0",
+    "style-loader": "^0.23.1"
   }
 }
